# phantom

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  phantom.py  phantom_cli.py  pyproject.toml  requirements.txt  setup_rest_env.sh
.github/workflows/: ci.yml
core/: __init__.py  contracts.py  doctor.py  errors.py  extensions.py  gateway.py  live_ui.py  loop.py  observability.py  onboard.py  orchestrator.py  providers.py  router.py  settings.py  skill_catalog.py  souls.py
docs/: ENGINEERING_REFERENCE.md  OPENCLAW_ENGINEERING_NOTES.md
evals/: __init__.py  offline.py
extensions/: README.md
extensions/browser-operator/: phantom.plugin.json
extensions/chief-of-staff/: phantom.plugin.json
extensions/discord-runtime/: phantom.plugin.json
extensions/github-cli/: phantom.plugin.json
extensions/messaging/: phantom.plugin.json
extensions/slack-runtime/: phantom.plugin.json
extensions/tmux-runtime/: phantom.plugin.json
integrations/: __init__.py  messaging.py
memory/: __init__.py
skills/: README.md
skills/browser-operator/: SKILL.md
skills/openclaw-compat/: README.md
tests/: test_browser_runtime.py  test_budget.py  test_cli.py  test_contracts.py  test_evals.py  test_extensions.py  test_gateway.py  test_live_ui.py  test_memory.py  test_messaging.py  test_observability.py  test_onboard.py  test_orchestrator.py  test_providers.py  test_safety.py  test_settings.py  test_skill_catalog.py  test_skill_runner.py  test_souls.py  test_structured_results.py
tools/: __init__.py  browser_runtime.py  safety.py  skill_runner.py
(+11 files in other folders)
