[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-agent"
version = "0.1.0"
description = "Local-first autonomous agent runtime with planning, memory, safety rails, and workflow learning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "agent", "automation", "llm", "multi-agent", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "anthropic",
  "openai",
  "playwright",
  "rich",
]

[project.urls]
Homepage = "https://github.com/borhen68/phantom"
Repository = "https://github.com/borhen68/phantom"
Issues = "https://github.com/borhen68/phantom/issues"

[project.scripts]
phantom = "phantom_cli:main"

[tool.setuptools]
py-modules = ["phantom", "phantom_cli"]

[tool.setuptools.packages.find]
include = ["core*", "memory*", "tools*", "evals*", "integrations*"]
